# Autonomous-Quadrotor

./: README.md
action_controller/: CMakeLists.txt
action_controller/msg_gen/cpp/include/action_controller/: MultiDofFollowJointTrajectoryAction.h  MultiDofFollowJointTrajectoryActionFeedback.h  MultiDofFollowJointTrajectoryActionGoal.h  MultiDofFollowJointTrajectoryActionResult.h  MultiDofFollowJointTrajectoryFeedback.h  MultiDofFollowJointTrajectoryGoal.h  MultiDofFollowJointTrajectoryResult.h
autonomous-quadrotor/launch/: MySpawn_quadrotor.launch  mySpawn_quadrotor_with_kinect.launch
hector_quadrotor_urdf/urdf/: quadrotor_base.urdf.xacro  quadrotore.urdf
moveit_simple_controller_manager/: CMakeLists.txt
quad_hardware_interface/: CMakeLists.txt  package.xml
quad_hardware_interface/config/: controllers.yaml  controllers_sim.yaml  hardware.yaml  joint_limits.yaml
quad_hardware_interface/include/quad_hardware_interface/: quad_hardware.h  quad_hardware_interface.h
quad_hardware_interface/launch/: quadposition_controllers.launch
quad_hardware_interface/src/: quad_hardware_interface.cpp  quad_hardware_interface_node.cpp
quadrotore2_moveit/config/: fake_controllers.yaml  quadrotor.srdf
quadrotore2_moveit/launch/: demo.launch  fake_moveit_controller_manager.launch  move_group.launch  moveit.rviz  plan_and_execute.launch  quadrotor_moveit_sensor_manager.launch  start.launch  trajectory_execution.launch
